pkg/berksfile/y.output

state 0
	$accept: .berksfile $end 
	statement_list: .    (3)

	SOURCE  shift 10
	METADATA  shift 11
	COOKBOOK  shift 12
	GROUP  shift 13
	NEWLINE  shift 5
	.  reduce 3 (src line 234)

	berksfile  goto 1
	statement_list  goto 2
	non_empty_statement_list  goto 3
	statement  goto 4
	source_stmt  goto 6
	metadata_stmt  goto 7
	cookbook_stmt  goto 8
	group_stmt  goto 9

state 1
	$accept:  berksfile.$end 

	$end  accept
	.  error


state 2
	berksfile:  statement_list.    (1)

	.  reduce 1 (src line 176)


state 3
	statement_list:  non_empty_statement_list.    (2)
	non_empty_statement_list:  non_empty_statement_list.statement 
	non_empty_statement_list:  non_empty_statement_list.NEWLINE 

	SOURCE  shift 10
	METADATA  shift 11
	COOKBOOK  shift 12
	GROUP  shift 13
	NEWLINE  shift 15
	.  reduce 2 (src line 230)

	statement  goto 14
	source_stmt  goto 6
	metadata_stmt  goto 7
	cookbook_stmt  goto 8
	group_stmt  goto 9

state 4
	non_empty_statement_list:  statement.    (6)

	.  reduce 6 (src line 266)


state 5
	non_empty_statement_list:  NEWLINE.    (7)

	.  reduce 7 (src line 286)


state 6
	statement:  source_stmt.    (8)

	.  reduce 8 (src line 294)


state 7
	statement:  metadata_stmt.    (9)

	.  reduce 9 (src line 301)


state 8
	statement:  cookbook_stmt.    (10)

	.  reduce 10 (src line 307)


state 9
	statement:  group_stmt.    (11)

	.  reduce 11 (src line 313)


state 10
	source_stmt:  SOURCE.source_args 

	IDENT  shift 18
	STRING  shift 17
	.  error

	source_args  goto 16

state 11
	metadata_stmt:  METADATA.    (16)

	.  reduce 16 (src line 349)


state 12
	cookbook_stmt:  COOKBOOK.cookbook_name cookbook_tail 

	IDENT  shift 21
	STRING  shift 20
	.  error

	cookbook_name  goto 19

state 13
	group_stmt:  GROUP.group_names DO group_body END 

	IDENT  shift 23
	STRING  shift 24
	COLON  shift 25
	.  error

	group_names  goto 22

state 14
	non_empty_statement_list:  non_empty_statement_list statement.    (4)

	.  reduce 4 (src line 242)


state 15
	non_empty_statement_list:  non_empty_statement_list NEWLINE.    (5)

	.  reduce 5 (src line 263)


state 16
	source_stmt:  SOURCE source_args.    (12)

	.  reduce 12 (src line 321)


state 17
	source_args:  STRING.    (13)

	.  reduce 13 (src line 331)


state 18
	source_args:  IDENT.COLON STRING 
	source_args:  IDENT.COLON STRING COMMA hash_pairs 

	COLON  shift 26
	.  error


state 19
	cookbook_stmt:  COOKBOOK cookbook_name.cookbook_tail 
	cookbook_tail: .    (25)

	COMMA  shift 28
	.  reduce 25 (src line 425)

	cookbook_tail  goto 27

state 20
	cookbook_name:  STRING.    (18)

	.  reduce 18 (src line 399)


state 21
	cookbook_name:  IDENT.    (19)

	.  reduce 19 (src line 401)


state 22
	group_stmt:  GROUP group_names.DO group_body END 
	group_names:  group_names.COMMA COLON IDENT 
	group_names:  group_names.COMMA COLON STRING 

	DO  shift 29
	COMMA  shift 30
	.  error


state 23
	group_names:  IDENT.    (29)

	.  reduce 29 (src line 468)


state 24
	group_names:  STRING.    (30)

	.  reduce 30 (src line 471)


state 25
	group_names:  COLON.IDENT 
	group_names:  COLON.STRING 

	IDENT  shift 31
	STRING  shift 32
	.  error


state 26
	source_args:  IDENT COLON.STRING 
	source_args:  IDENT COLON.STRING COMMA hash_pairs 

	STRING  shift 33
	.  error


state 27
	cookbook_stmt:  COOKBOOK cookbook_name cookbook_tail.    (17)

	.  reduce 17 (src line 355)


state 28
	cookbook_tail:  COMMA.STRING 
	cookbook_tail:  COMMA.LBRACE hash_pairs RBRACE 
	cookbook_tail:  COMMA.STRING COMMA LBRACE hash_pairs RBRACE 
	cookbook_tail:  COMMA.hash_pairs 
	cookbook_tail:  COMMA.STRING COMMA hash_pairs 

	IDENT  shift 38
	STRING  shift 34
	COLON  shift 39
	LBRACE  shift 35
	.  error

	hash_pairs  goto 36
	hash_pair  goto 37

state 29
	group_stmt:  GROUP group_names DO.group_body END 
	group_body: .    (34)

	COOKBOOK  shift 12
	NEWLINE  shift 43
	.  reduce 34 (src line 486)

	cookbook_stmt  goto 42
	group_body  goto 40
	group_content  goto 41

state 30
	group_names:  group_names COMMA.COLON IDENT 
	group_names:  group_names COMMA.COLON STRING 

	COLON  shift 44
	.  error


state 31
	group_names:  COLON IDENT.    (31)

	.  reduce 31 (src line 474)


state 32
	group_names:  COLON STRING.    (32)

	.  reduce 32 (src line 477)


state 33
	source_args:  IDENT COLON STRING.    (14)
	source_args:  IDENT COLON STRING.COMMA hash_pairs 

	COMMA  shift 45
	.  reduce 14 (src line 337)


state 34
	cookbook_tail:  COMMA STRING.    (20)
	cookbook_tail:  COMMA STRING.COMMA LBRACE hash_pairs RBRACE 
	cookbook_tail:  COMMA STRING.COMMA hash_pairs 
	hash_pair:  STRING.HASHROCKET STRING 

	COMMA  shift 46
	HASHROCKET  shift 47
	.  reduce 20 (src line 404)


state 35
	cookbook_tail:  COMMA LBRACE.hash_pairs RBRACE 

	IDENT  shift 38
	STRING  shift 49
	COLON  shift 39
	.  error

	hash_pairs  goto 48
	hash_pair  goto 37

state 36
	cookbook_tail:  COMMA hash_pairs.    (23)

	.  reduce 23 (src line 417)


state 37
	hash_pairs:  hash_pair.hash_pairs_tail 
	hash_pairs_tail: .    (41)

	COMMA  shift 51
	.  reduce 41 (src line 524)

	hash_pairs_tail  goto 50

state 38
	hash_pair:  IDENT.COLON STRING 

	COLON  shift 52
	.  error


state 39
	hash_pair:  COLON.IDENT HASHROCKET STRING 

	IDENT  shift 53
	.  error


state 40
	group_stmt:  GROUP group_names DO group_body.END 

	END  shift 54
	.  error


state 41
	group_body:  group_content.    (33)
	group_content:  group_content.cookbook_stmt 
	group_content:  group_content.NEWLINE 

	COOKBOOK  shift 12
	NEWLINE  shift 56
	.  reduce 33 (src line 482)

	cookbook_stmt  goto 55

state 42
	group_content:  cookbook_stmt.    (37)

	.  reduce 37 (src line 498)


state 43
	group_content:  NEWLINE.    (38)

	.  reduce 38 (src line 501)


state 44
	group_names:  group_names COMMA COLON.IDENT 
	group_names:  group_names COMMA COLON.STRING 

	IDENT  shift 57
	STRING  shift 58
	.  error


state 45
	source_args:  IDENT COLON STRING COMMA.hash_pairs 

	IDENT  shift 38
	STRING  shift 49
	COLON  shift 39
	.  error

	hash_pairs  goto 59
	hash_pair  goto 37

state 46
	cookbook_tail:  COMMA STRING COMMA.LBRACE hash_pairs RBRACE 
	cookbook_tail:  COMMA STRING COMMA.hash_pairs 

	IDENT  shift 38
	STRING  shift 49
	COLON  shift 39
	LBRACE  shift 60
	.  error

	hash_pairs  goto 61
	hash_pair  goto 37

state 47
	hash_pair:  STRING HASHROCKET.STRING 

	STRING  shift 62
	.  error


state 48
	cookbook_tail:  COMMA LBRACE hash_pairs.RBRACE 

	RBRACE  shift 63
	.  error


state 49
	hash_pair:  STRING.HASHROCKET STRING 

	HASHROCKET  shift 47
	.  error


state 50
	hash_pairs:  hash_pair hash_pairs_tail.    (39)

	.  reduce 39 (src line 506)


state 51
	hash_pairs_tail:  COMMA.hash_pair hash_pairs_tail 

	IDENT  shift 38
	STRING  shift 49
	COLON  shift 39
	.  error

	hash_pair  goto 64

state 52
	hash_pair:  IDENT COLON.STRING 

	STRING  shift 65
	.  error


state 53
	hash_pair:  COLON IDENT.HASHROCKET STRING 

	HASHROCKET  shift 66
	.  error


state 54
	group_stmt:  GROUP group_names DO group_body END.    (26)

	.  reduce 26 (src line 431)


state 55
	group_content:  group_content cookbook_stmt.    (35)

	.  reduce 35 (src line 491)


state 56
	group_content:  group_content NEWLINE.    (36)

	.  reduce 36 (src line 495)


state 57
	group_names:  group_names COMMA COLON IDENT.    (27)

	.  reduce 27 (src line 461)


state 58
	group_names:  group_names COMMA COLON STRING.    (28)

	.  reduce 28 (src line 465)


state 59
	source_args:  IDENT COLON STRING COMMA hash_pairs.    (15)

	.  reduce 15 (src line 342)


state 60
	cookbook_tail:  COMMA STRING COMMA LBRACE.hash_pairs RBRACE 

	IDENT  shift 38
	STRING  shift 49
	COLON  shift 39
	.  error

	hash_pairs  goto 67
	hash_pair  goto 37

state 61
	cookbook_tail:  COMMA STRING COMMA hash_pairs.    (24)

	.  reduce 24 (src line 421)


state 62
	hash_pair:  STRING HASHROCKET STRING.    (44)

	.  reduce 44 (src line 538)


state 63
	cookbook_tail:  COMMA LBRACE hash_pairs RBRACE.    (21)

	.  reduce 21 (src line 409)


state 64
	hash_pairs_tail:  COMMA hash_pair.hash_pairs_tail 
	hash_pairs_tail: .    (41)

	COMMA  shift 51
	.  reduce 41 (src line 524)

	hash_pairs_tail  goto 68

state 65
	hash_pair:  IDENT COLON STRING.    (42)

	.  reduce 42 (src line 529)


state 66
	hash_pair:  COLON IDENT HASHROCKET.STRING 

	STRING  shift 69
	.  error


state 67
	cookbook_tail:  COMMA STRING COMMA LBRACE hash_pairs.RBRACE 

	RBRACE  shift 70
	.  error


state 68
	hash_pairs_tail:  COMMA hash_pair hash_pairs_tail.    (40)

	.  reduce 40 (src line 516)


state 69
	hash_pair:  COLON IDENT HASHROCKET STRING.    (43)

	.  reduce 43 (src line 534)


state 70
	cookbook_tail:  COMMA STRING COMMA LBRACE hash_pairs RBRACE.    (22)

	.  reduce 22 (src line 413)


17 terminals, 18 nonterminals
45 grammar rules, 71/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
67 working sets used
memory: parser 33/240000
31 extra closures
66 shift entries, 1 exceptions
26 goto entries
8 entries saved by goto default
Optimizer space used: output 82/240000
82 table entries, 0 zero
maximum spread: 17, maximum offset: 64
